--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <HTML>
 <HEAD>
-<TITLE>Your Title Here</TITLE>
+<TITLE>Snug-Baby!</TITLE>
 </HEAD>
 <BODY BGCOLOR="FFFFFF">
-<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
 <HR>
 <a href="http://somegreatsite.com">Link Name</a>
 is a link to another nifty site
-<H1>This is a Header</H1>
-<H2>This is a Medium Header</H2>
-Send me mail at <a href="mailto:support@yourcompany.com">
+<H1>App Under construction! Going Live Soon!</H1>
+Send me mail at <a href="n3m8tz@gmail.com">
 support@yourcompany.com</a>.
-<P> This is a new paragraph!
-<P> <B>This is a new paragraph!</B>
-<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+<P> Snug-baby is a simplistic cross platform calloborative baby tracking app.
 <HR>
 </BODY>
 </HTML>
