Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,14 +1,72 @@
-<HTML>
-<HEAD>
-<TITLE>Snug-Baby!</TITLE>
-</HEAD>
-<BODY BGCOLOR="FFFFFF">
-<HR>
-<H1>App Under construction! Going Live Soon!</H1>
-Send me mail at <a href="n3m8tz@gmail.com">
-support@yourcompany.com</a>.
-<P> Snug-baby is a simplistic cross platform calloborative baby tracking app.
-<HR>
-</BODY>
-</HTML>
+<!DOCTYPE html>
+<html>
 
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Snug-baby : Simplistic application that track baby&#39;s daily activities">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Snug-baby</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/n3m8tz/snug-baby">View on GitHub</a>
+
+          <h1 id="project_title">Snug-baby</h1>
+          <h2 id="project_tagline">Simplistic application that track baby&#39;s daily activities</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/n3m8tz/snug-baby/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/n3m8tz/snug-baby/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="welcome-to-snug-baby" class="anchor" href="#welcome-to-snug-baby" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Snug-Baby</h3>
+
+<p>Let us know how we can help your track your baby.</p>
+
+<p>Site coming online soon</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>(<a href="https://github.com/AndrewSmarty" class="user-mention">@AndrewSmarty</a>)</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Snug-baby maintained by <a href="https://github.com/n3m8tz">n3m8tz</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-59123001-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+
+  </body>
+</html>
