Snug-Baby 4.0 GAPI Realtime Test 0.2

--- a/main.html
+++ b/main.html
@@ -24,6 +24,7 @@
 </head>   
 <body>                
 <button id="authorizeButton" disabled>Authenticate</button>
+<button disabled>Hello</button>
 <button id="submitButton"> Submit</button>
 <textarea id="textarea" cols='300' rows='300' style="display:none"></textarea>
 
