Snug-Baby 4.0 GAPI Realtime Test 2

--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
  	<!-- Load the utility library. -->
   	<script type="text/javascript" src="js/realtime-client-utils.js"></script>
   	<!-- Load Snug Baby Goorle Drive Realtime QuickStart implementation. -->
-  	<script type="text/javascript" src="gapi.realtime.js"></script>
+  	<script type="text/javascript" src="js/gapi.realtime.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<link rel="stylesheet" type="text/css" href="jquery-ui.min.css" />
@@ -24,6 +24,7 @@
 </head>   
 <body>                
 <button id="authorizeButton" disabled>Authenticate</button>
+<button disabled>Hello</button>
 <button id="submitButton"> Submit</button>
 <textarea id="textarea" cols='300' rows='300' style="display:none"></textarea>
 
