--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script type="text/javascript"  src="https://apis.google.com/js/api.js"></script>
 
   <!-- Load the utility library. -->
-  <script type="text/javascript"  src="realtime-client-utils.js"></script>
+  <script type="text/javascript"  src="js/realtime-client-utils.js"></script>
 </head>
 
 <!-- Start Realtime when the body has loaded. -->
