Playing around with actions

--- a/index.html
+++ b/index.html
@@ -208,6 +208,19 @@
 										</div>
 									</section>
 
+
+									<section data-type="activity">
+										<div>
+											<div class = "activity unselected" data-activity-type="weight">
+												
+											</div>
+											
+											<label>
+												<input type="radio" name="activity_radio" />Vitamins
+											</label>
+										</div>
+									</section>
+
 								<div class="add_person_button">
 									<div>
 										<div></div>
