--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 									<section data-type="activity">
 										<div>
 											<div class = "activity unselected" data-activity-type="diaper">
-												
+											<img src="images/pee.png">	
 											</div>
 											
 											<label>
