--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
 	<title>Snug-Baby App</title>
   	<meta http-equiv="X-UA-Compatible" content="IE=9">
 
+  	<!-- Load Style Sheets. -->
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/jquery-ui.min.css" />
+	<link rel="stylesheet" href="css/jquery.simplecolorpicker.css" />
+	
+  	<!-- Load Libraries. -->
+  	<script type="text/javascript" src="js/lib/angular.js"></script>
+  	<script type="text/javascript" src="js/lib/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery.simplecolorpicker.js"></script>
+	<script type="text/javascript" src="js/lib/bootstrap.js"></script>
+
 	<!-- Load the Realtime libraries. -->
   	<script type="text/javascript" src="https://apis.google.com/js/api.js"></script>
  	<!-- Load the utility library. -->
   	<script type="text/javascript" src="js/realtime-client-utils.js"></script>
   	<!-- Load Snug Baby Google Drive Realtime QuickStart implementation. -->
   	<script type="text/javascript" src="js/gapi.realtime.js"></script>
-
   	<!-- Load Snug Baby Main. -->
-  	<script type = "text/javascript" src = "js/main.js"></script>
-
-  	<!-- Load Snug Baby Libraries implementation. -->
-  	<script type = "text/javascript" src = "js/lib/angular.js"></script>
-  	<script type = "text/javascript" src = "js/lib/bootstrap.js"></script>
-  	<script type="text/javascript" src="js/lib/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="js/lib/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="js/snugbaby-daytime.js"></script>
-	<script type="text/javascript" src="js/lib/jquery.simplecolorpicker.js"></script>
+  	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/lib/snugbaby-daytime.js"></script>
 	<!--<script type="text/javascript" src="js/jquery.reveal.js"></script>-->
 
-  	<!-- Load Style Sheets. -->
-	<link rel="stylesheet" href="css/bootstrap.css" />
-	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="css/jquery-ui.min.css" />
-	<link rel="stylesheet" href="css/jquery.simplecolorpicker.css" />
 
 </head>   
 <body>                
