--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
   	<link rel="stylesheet/less" type="text/css" href="less/styles.less" />
-  	
+  	<link rel="icon" href="images/favicon.png" />
+
 	<script type="text/javascript" src="js/libraries/less.min.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 
