Data Structure Completed

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
   	<link rel="stylesheet/less" type="text/css" href="less/styles.less" />
-  	<link rel="icon" href="images/favicon.png" />
-
+  	
 	<script type="text/javascript" src="js/libraries/less.min.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 
@@ -95,9 +94,9 @@
 								<div> 
 									<div id="avatar_select_desc">Select Avatar:</div>
 									<div>
-										<div class="avatar unselected" data-avatar-type="type1"><img src="images/avatar-type1.png" /></div> 
-										<div class="avatar unselected" data-avatar-type="type2"><img src="images/avatar-type2.png" /></div>
-										<div class="avatar unselected unuploaded" data-avatar-type="type3"></div>
+										<div class="avatar unselected" data-avatar-type="1"><img src="images/avatar1.png" /></div> 
+										<div class="avatar unselected" data-avatar-type="1"><img src="images/avatar2.png" /></div>
+										<div class="avatar unselected unuploaded" data-avatar-type="2"></div>
 										<input type="file" accept="image/*" />
 										<div class="clear"></div>
 									</div>
