Added Loading Sign

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 				<div id="bt_body">
 					<div id="bt_container">
 
+						<section id="loading_sign">
+							<img src="images/loading-sign.gif" width="75px" height="99px" />
+						</section>
+						
 						<section id="create_person_block">
 							<section>
 								<h1>Let's add a new person to track!</h1>
