--- a/index.html
+++ b/index.html
@@ -52,14 +52,18 @@
 						<div id = "bt_title_main">BABY TRACKER</div>
 
 						<div id="bt_search_engine_area">
-							<span title="Search"></span>
+							<div>
+								<div title="Search"></div>
+							</div>
 							<div id="bt_search_engine">
 								<input type="text" name="search_field" placeholder="Search" spellcheck="false"/>
 							</div>
-							<span title="Reset results"></span>
+							<div>
+								<div title="Reset results"></div>
+							</div>
+							
 						</div>
-
-						<!--<div class="clear"></div>-->
+						<div class="clear"></div>
 					</div>
 
 					<div id="bt_person_profile"></div>
