Some Bugs fixed: DateTime Bug,  displaying entries with the same ID,  displaying entries with the same ID, Fixed bug with Displaying the same results, Fixed bug with changing avatars in Modify window

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								<div>
 									<div id="color_scheme_desc">Color Scheme:</div>
 									<div id="palette_field">
-										<select name="colorpicker-regularfont">
+										<select class="colorpicker">
 											<option value="#7bd148">Green</option>
 											<option value="#5484ed">Bold blue</option>
 											<option value="#a4bdfc">Blue</option>
