Added new id to reset button only

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<input type="text" name="search_field" placeholder="Search" spellcheck="false"/>
 							</div>
 							<div>
-								<div title="Reset results"></div>
+								<div id="search_reset_btn" title="Reset results"></div>
 							</div>
 							
 						</div>
