--- a/index.html
+++ b/index.html
@@ -5,38 +5,44 @@
   	<meta http-equiv="X-UA-Compatible" content="IE=9" />
   	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
 
+  	<!-- CSS styles and Google Fonts -->
   	<link rel="stylesheet/less" type="text/css" href="less/styles.less" />
 	<link rel="stylesheet/less" type="text/css" href="less/fonts.less">
-  	
+
+	<!-- Shortcut Favicon -->
   	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+     
+    <!-- Shortcut Favicon -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+   	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script src="js/libraries/less.min.js" type="text/javascript"></script>
 
-	<script type="text/javascript" src="js/libraries/less.min.js"></script>
-	<script type="text/javascript" src="js/scripts.js"></script>
-
+	<script src="js/scripts.js" type="text/javascript" ></script>
+    <script src="js/libraries/materialize.js" type="text/javascript"></script>
 </head>   
 <body>                
 
-		<div id="authModal" class="bs-modal fade laptop">
-			<div class="bs-modal-dialog bs-modal-vertical-centered">
-				<div class="bs-modal-content">
-					<div class="bs-modal-body">
-						<div>
+		<div id="authModal" class="modal auth-page">
+			
+				<div class="modal-content">
+					<div class="modal-body">
+						<div id="auth-page-header">
 							<div>Snug Baby</div>
 						</div>
-						<div>
-							<object type="image/svg+xml" data="images/start-page-logo.svg">Your browser does not support SVG</object>
+						<div id="auth-page-logo">
+							<object type="image/svg+xml" data="images/start-logo.svg">Your browser does not support SVG</object>
 						</div>
-						<div>
+						<div id="auth-page-summary">
 							<div>A baby tracking app that helps you monitor the progress and activities of all your babies in a single view.</div>
 						</div>
-						<div>
+						<div id="auth-page-submit">
 							<div>
-								<button id="authorizeButton" class="waves-effect waves-light btn red lighten-3" disabled>SIGN IN WITH GOOGLE</button>
+								<a id="authorizeButton" class="waves-effect waves-light btn red">SIGN IN WITH GOOGLE</a>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			
 		</div>
 
 		<section class="mobile-disabled-alarm">
@@ -52,9 +58,10 @@
                                         <!--####################################################################-->
 		
 			<main id="bt_main_table">
-				<header id="bt_header">
 
+				<header id="bt_header">
 					<div>
+
 						<div id = "bt_title_main">BABY TRACKER</div>
 
 						<div id="bt_search_engine_area">
