Added 2 features: 1) An opportunity to return to Start Page by clicking main app title (to the top left)   2) Materialize is enabled when mobile, but disabled when pc.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
 
   	<!-- CSS styles and Google Fonts -->
+  	<link rel="stylesheet"  type="text/css" href="css/materialize.css" id="materialize-link"/>
   	<link rel="stylesheet/less" type="text/css" href="less/styles.less" />
 	<link rel="stylesheet/less" type="text/css" href="less/fonts.less">
 
@@ -62,7 +63,7 @@
 				<header id="bt_header">
 					<div>
 
-						<div id = "bt_title_main">BABY TRACKER</div>
+						<div id = "bt_title_main" title="Go to Start Page">BABY TRACKER</div>
 
 						<div id="bt_search_engine_area">
 							<div>
