--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<title>Snug-Baby App</title>
   	<meta http-equiv="X-UA-Compatible" content="IE=9" />
   	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
-
+  	
   	<!-- CSS styles and Google Fonts and Icons -->
   	<link rel="stylesheet"  type="text/css" href="css/materialize.css" id="materialize-link" media="screen,projection"/>
   	<link rel="stylesheet/less" type="text/css" href="less/styles.less" />
 	<link rel="stylesheet/less" type="text/css" href="less/fonts-icons.less">
+
+	
 
 	<!-- Shortcut Favicon -->
   	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
@@ -19,7 +21,9 @@
     <script src="js/libraries/less.min.js" type="text/javascript"></script>
  
 	<script src="js/scripts.js" type="text/javascript" ></script>
+	<script src="https://apis.google.com/js/platform.js"></script>
     <script src="js/libraries/materialize.js" type="text/javascript"></script>
+
 </head>   
 <body>                
 
@@ -383,7 +387,7 @@
 						</ul>
 
 						<ul class="side-nav" id="person-profile">
-							<li><a class="waves-effect waves-light" href="http://www.youtube.com">Logout</a></li>
+							<li><a class="waves-effect waves-light logout" href="javascript:void(0)">Logout</a></li>
 							<li class="divider"></li>
 							<li><a class="share-file waves-effect waves-light" href="javascript:void(0)">Share</a></li>
 							<li><a class="waves-effect waves-light" href="http://www.snug-baby.com">Settings</a></li>
@@ -490,6 +494,7 @@
 			</section>
 
 		</section>
+		
 </body>
 
 
