Checking bug with not being able to load app on Safari. Added cancel event button.

--- a/index.html
+++ b/index.html
@@ -374,15 +374,16 @@
 				<nav id="mobile-header" role="navigation">
 					<div class="nav-wrapper">
 						
-						<a href="#" data-activates="person-profile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-						
+						<a href="#" class="button-collapse" data-activates="person-profile" ><i class="mdi-navigation-menu"></i></a>
+						<a href="#" class="button-close" ><i class="mdi-navigation-close"></i></a>
+
 						<ul>
 							<li class="actions_area_mobile">
-								<a href="javascritp:void(0)" id="actions_logo">Actions</a>
+								<a href="javascript:void(0)" id="actions_logo">Actions</a>
 							</li>	
 							<li class="right">
-								<a href="javascritp:void(0)" id="search_button_mobile"><i class="mdi-action-search"></i></a>
-								<a href="javascritp:void(0)" id="apply_event_button_mobile"><i class="mdi-action-done"></i></a>
+								<a href="javascript:void(0)" id="search_button_mobile"><i class="mdi-action-search"></i></a>
+								<a href="javascript:void(0)" id="apply_event_button_mobile"><i class="mdi-action-done"></i></a>
 							</li>				
 						</ul>
 
