--- a/index.html
+++ b/index.html
@@ -476,12 +476,13 @@
 					</div>
 
 					<div class="notes_panel_mobile">
-							<div class="illustration"></div>
+							<div class="illustration">
+								<i class="material-icons">edit</i>
+							</div>
 
 							<div class="information"> 
 								<div class="input-field col s6">
-									<div class="input-wrapper">
-										<i class="material-icons prefix">edit</i>
+									<div class="select-wrapper">
 										<input id="notes_input_mobile" type="text" />
 										<label for="notes_input_mobile">Add notes</label>
 									</div>
