--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   	<link rel="stylesheet/less" type="text/css" href="less/styles.less" />
 	<link rel="stylesheet/less" type="text/css" href="less/fonts-icons.less">
 
-	
 
 	<!-- Shortcut Favicon -->
   	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
@@ -19,8 +18,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
    	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="js/libraries/less.min.js" type="text/javascript"></script>
- 
+
+ 	<script src="js/libraries/selectBabyTable.js" type="text/javascript" ></script>	
 	<script src="js/scripts.js" type="text/javascript" ></script>
+
+	
+
 	<script src="https://apis.google.com/js/platform.js"></script>
     <script src="js/libraries/materialize.js" type="text/javascript"></script>
 
@@ -370,12 +373,13 @@
 			<div class="fixed-action-btn" id="add_event_button_mobile">
 				<a class="btn-floating btn-large waves-effect waves-light red lighten-1"><i class="mdi-content-add"></i></a>
 			</div>
-			<div class="navbar-fixed">
+			<div id="nav-bar" class="navbar-fixed">
 				<nav id="mobile-header" role="navigation">
 					<div class="nav-wrapper">
 						
 						<a href="#" class="button-collapse" data-activates="person-profile" ><i class="mdi-navigation-menu"></i></a>
 						<a href="#" class="button-close" ><i class="mdi-navigation-close"></i></a>
+						<a href="#" class="button-back" ><i class="mdi-navigation-arrow-back"></i></a>
 
 						<ul>
 							<li class="actions_area_mobile">
@@ -401,7 +405,7 @@
 			</div>
 
 			<div id="search_area_mobile" class="row white-text grey darken-3" >
-				<div class="container">
+				<div class="container"> 
 					<form method="get" action="">
 						<input class="form-control" name="search_field" type="text" placeholder="Search ..." autocomplete="off" spellcheck="false">
 					</form>
@@ -414,26 +418,25 @@
 				</section>
 			</section>
 
+
 			<section id="add_action_table_mobile">
 				<section>
 					<div class="avatar_panel_mobile">
 							<div class="illustration">
-								<img src="images/avatar_girl.png"/>
+								<img id="person_avatar_mobile" src="images/avatar_girl.png"/>
 							</div>
 
 							<div class="information">
-								 <div class="input-field col s12">
-									<select id="select_baby_mobile">
-										<option value="" disabled selected>Choose baby</option>
-									</select>
-									<!-- <label>Choose baby</label> -->
+								<div class="input-field col s6">
+									<div class="select-wrapper">
+										<input id="person_nickname_mobile" type="text" disabled>
+										<label for="person_nickname_mobile">Choose baby</label>
+									</div>
 								</div>	
 							</div>
 
 							<div class="clear"></div>
 					</div>
-
-
 					<div class="activity_panel_mobile">
 							<div class="illustration">
 								<img src="images/feed-mobile.png"/>
@@ -450,7 +453,6 @@
 							</div>
 							<div class="clear"></div>
 					</div>
-
 					<div class="activity_params_panel_mobile">
 							<div class="illustration"></div>
 
@@ -474,7 +476,6 @@
 							</div>
 							<div class="clear"></div>
 					</div>
-
 					<div class="notes_panel_mobile">
 							<div class="illustration">
 								<i class="material-icons">edit</i>
@@ -491,11 +492,29 @@
 							
 							<div class="clear"></div>
 					</div>
-	
 				</section>
 			</section>
 
-		</section>
+			<!--
+
+			<section id="select_baby_table_mobile">
+				<section>
+					<form name="select-baby-form">
+						<div class="image-grid-block">
+							<div class="image-grid-block-content">
+								<label for="test1">
+									<div class="image-grid-block-text">Bay Bridge</div>
+									<img src="images/profile avatars/Aleksandra.png" />
+									<input id="test1" name="test" type="radio" value="1" />
+								</label>
+							</div>
+						</div>
+						...
+					</form>
+				</section>
+			</section> 
+
+			-->
 		
 </body>
 
