Added hamburger-to-X feature on navigation.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<main id="bt_main_table">
 
 				<header id="bt_header">
-					<div>
+					<div> 
 
 						<div id = "bt_title_main" title="Go to Start Page">BABY TRACKER</div>
 
@@ -370,14 +370,21 @@
                                         <!--####################################################################-->
 		
 		<section id="MobileVersionBoby">
-			<div class="fixed-action-btn" id="add_event_button_mobile">
+			<div class="fixed-action-btn" id="add_event_button_mobile"> 
 				<a class="btn-floating btn-large waves-effect waves-light red lighten-1"><i class="mdi-content-add"></i></a>
 			</div>
 			<div id="nav-bar" class="navbar-fixed">
 				<nav id="mobile-header" role="navigation">
-					<div class="nav-wrapper">
+					<div class="nav-wrapper" >
+						<div id="hamburger-button" class="button-collapse" data-activates="person-profile">
+							<div >
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
+						</div>
 						
-						<a href="#" class="button-collapse" data-activates="person-profile" ><i class="mdi-navigation-menu"></i></a>
 						<a href="#" class="button-close" ><i class="mdi-navigation-close"></i></a>
 						<a href="#" class="button-back" ><i class="mdi-navigation-arrow-back"></i></a>
 
@@ -492,6 +499,7 @@
 							
 							<div class="clear"></div>
 					</div>
+
 				</section>
 			</section>
 
