--- a/index.html
+++ b/index.html
@@ -400,10 +400,9 @@
 							<li><a class="waves-effect waves-light logout" href="javascript:void(0)">Logout</a></li>
 							<li class="divider"></li>
 							<li><a class="share-file waves-effect waves-light" href="javascript:void(0)">Share</a></li>
-							<li><a class="waves-effect waves-light" href="http://www.snug-baby.com">Settings</a></li>
+							<li><a class="waves-effect waves-light" href="javascript:void(0)">Settings</a></li>
 							<li class="divider"></li>
-							<li><a class="waves-effect waves-light" href="http://www.facebook.com">Help</a></li>
-							<li><a class="waves-effect waves-light" href="http://www.facebook.com">Contact</a></li>
+							<li><a class="waves-effect waves-light" href="javascript:void(0)">Contact</a></li>
 						</ul>
 					</div>
 				</nav>
