--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@
 							<div class="information"> 
 								<div>
 									<div class="input-wrapper input-field col s6">
-										<div class="input-group clockpicker">
-											<input type="text" class="form-control timepicker" value="13:14 AM">
+										<div class="input-group">
+											<input type="date" class="form-control datepicker">
 											<span class="input-group-addon">
 												<span class="glyphicon glyphicon-time"></span>
 											</span>
