Fixed bug -> 'Unxpected behavior of hamburger navigation button when press'.

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 				<nav id="mobile-header" role="navigation">
 					<div class="nav-wrapper" >
 
-						<div id="hamburger-button" class="button-collapse" data-activates="person-profile">
+						<div id="hamburger-button" class="waves-effect button-collapse" data-activates="person-profile">
 							<div>
 								<span></span>
 								<span></span>
@@ -391,8 +391,8 @@
 								<a href="javascript:void(0)" id="actions_logo">Actions</a>
 							</li>	
 							<li class="right">
-								<a href="javascript:void(0)" id="search_button_mobile"><i class="mdi-action-search"></i></a>
-								<a href="javascript:void(0)" id="apply_event_button_mobile"><i class="mdi-action-done"></i></a>
+								<a href="javascript:void(0)" id="search_button_mobile" class="waves-effect"><i class="mdi-action-search"></i></a>
+								<a href="javascript:void(0)" id="apply_event_button_mobile" class="waves-effect"><i class="mdi-action-done"></i></a>
 							</li>				
 						</ul>
 
