--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</div>
 			
 		</div>
-
+<!-- 1 -->
         <!--#####################################################################################################################################-->
 
 
@@ -469,8 +469,8 @@
 
 									<div class="input-wrapper input-field col s6">
 										<div class="input-group">
-											<input type="date" class="form-control datepicker">
-											<label for="amount_mobile">Date</label>
+											<input type="date" id="date_mobile" class="form-control datepicker">
+											<label for="date_mobile">Date</label>
 											<span class="input-group-addon">
 												<span class="glyphicon glyphicon-time"></span>
 											</span>
@@ -479,8 +479,8 @@
 
 									<div class="input-wrapper input-field col s6">
 										<div class="input-group clockpicker">
-											<input type="text" class="form-control timepicker" value="09:32">
-											
+											<input id="time_mobile" type="text" class="form-control timepicker">
+											<label for="time_mobile">Time</label>
 											<span class="input-group-addon">
 												<span class="glyphicon glyphicon-time"></span>
 											</span>
