--- a/index.html
+++ b/index.html
@@ -374,6 +374,9 @@
 			<div class="fixed-action-btn" id="add_event_button_mobile"> 
 				<a class="btn-floating btn-large waves-effect waves-light red lighten-1"><i class="mdi-content-add"></i></a>
 			</div>
+			<div class="fixed-action-btn" id="create_baby_button_mobile"> 
+				<a class="btn-floating waves-effect aqua"><i class="mdi-content-add"></i></a>
+			</div>
 			<div id="nav-bar" class="navbar-fixed">
 				<nav id="mobile-header" role="navigation">
 					<div class="nav-wrapper" >
@@ -524,6 +527,51 @@
 					</div>
 					
 				</section>
+			</section>
+
+			<section id="create_baby_table_mobile">
+				<section>
+					<div class="new_avatar_panel_mobile">
+							<div class="illustration">
+								<img id="new_person_avatar_mobile" src="images/avatar_girl.png"/>
+								<input type="file" accept="image/*" />
+							</div>
+
+							<div class="information">
+								<div class="input-field col s6">
+									<div class="select-wrapper">
+										<input id="new_person_nickname_mobile" type="text">
+										<label for="new_person_nickname_mobile">Choose nickname</label>
+									</div>
+								</div>	
+							</div>
+
+							<div class="clear"></div>
+					</div>
+
+
+					<div class="birthday_panel_mobile">
+							<div class="illustration">
+								<i class="material-icons">cake</i>
+							</div>
+
+							<div class="information"> 
+								<div class="input-field col s6">
+									<div class="input-wrapper input-field col s6">
+										<div class="input-group">
+											<input type="date" id="birthday_input_mobile" class="form-control birthdaypicker">
+											<label for="birthday_input_mobile">Birthday</label>
+											<span class="input-group-addon">
+												<span class="glyphicon glyphicon-time"></span>
+											</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							
+							<div class="clear"></div>
+					</div>
+				</section>	
 			</section>
 
 			<!--
