'Choose baby field should be clickable' issue fixed.

--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
 									<div class="select-wrapper">
 										<input id="person_nickname_mobile" type="text" disabled>
 										<label for="person_nickname_mobile">Choose baby</label>
+										<div class="clickable-disabled"></div>
 									</div>
 								</div>	
 							</div>
