--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 							<li><a class="share-file waves-effect waves-light" href="javascript:void(0)">Share</a></li>
 							<li><a class="waves-effect waves-light" href="javascript:void(0)">Settings</a></li>
 							<li class="divider"></li>
-							<li><a class="waves-effect waves-light" href="javascript:void(0)">Contact</a></li>
+							<li><a class="waves-effect waves-light" href="javascript:window.location.href='mailto:n3m8tz@gmail.com'">Contact</a></li>
 						</ul>
 					</div>
 				</nav>
