Default feed option 1.

--- a/index.html
+++ b/index.html
@@ -454,8 +454,9 @@
 							<div class="information"> 
 								<div class="input-field col s12">
 									<select id="select_activity_mobile">
-										<option value="" disabled selected>Choose action</option>
-										<option value="1" >Feed</option>
+										<option value="" disabled>Choose action</option>
+										<option value="1" selected>Feed</option>
+
 									</select>
 									<!-- <label>Choose action</label>-->
 								</div>	
