--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 							<li class="actions_area_mobile">
 								<a href="javascript:void(0)" id="actions_logo">Actions</a>
 							</li>	
-							<li class="right">
+							<li class="right">  
 								<a href="javascript:void(0)" id="search_button_mobile" class="waves-effect"><i class="mdi-action-search"></i></a>
 								<a href="javascript:void(0)" id="apply_event_button_mobile" class="waves-effect"><i class="mdi-action-done"></i></a>
 							</li>				
@@ -405,7 +405,7 @@
 							<li class="divider"></li>
 							<li><a class="share-file waves-effect waves-light" href="javascript:void(0)">Share</a></li>
 							<li><a class="waves-effect waves-light" href="javascript:void(0)">Settings</a></li>
-							<li><a class="remove-baby waves-effect waves-light" href="javascript:void(0)">Remove babies</a></li>
+							<li><a class="remove-baby waves-effect waves-light" href="javascript:void(0)">Remove baby</a></li>
 							<li class="divider"></li>
 							<li><a class="waves-effect waves-light" href="javascript:window.location.href='mailto:n3m8tz@gmail.com'">Contact</a></li>
 						</ul>
