--- a/index.html
+++ b/index.html
@@ -401,8 +401,7 @@
 							<li><a class="waves-effect waves-light logout" href="javascript:void(0)">Logout</a></li>
 							<li class="divider"></li>
 							<li><a class="share-file waves-effect waves-light" href="javascript:void(0)">Share</a></li>
-							<li><a class="waves-effect waves-light" href="javascript:void(0)">Settings</a></li>
-							<li><a class="remove-baby waves-effect waves-light" href="javascript:void(0)">Remove baby</a></li>
+							<li><a class="remove-baby waves-effect waves-light" href="javascript:void(0)">Delete baby</a></li>
 							<li class="divider"></li>
 							<li><a class="waves-effect waves-light" href="javascript:window.location.href='mailto:n3m8tz@gmail.com'">Contact</a></li>
 						</ul>
@@ -425,7 +424,7 @@
 			</section>
 
 
-			<section id="add_action_table_mobile">
+			<section id="add_action_table_mobile" data-timestamp="">
 				<section>
 					<div class="avatar_panel_mobile">
 							<div class="illustration">
@@ -566,6 +565,19 @@
 							<div class="clear"></div>
 					</div>
 					
+					<div class="trash_panel_mobile">
+							<div class="illustration">
+								<i class="material-icons">delete</i>
+							</div>
+
+							<div class="information"> 
+								<div class="select-wrapper">
+									<div id="delete_action_mobile">Trash</div>
+								</div>
+							</div>
+							
+							<div class="clear"></div>
+					</div>
 				</section>
 			</section>
 
